--- a/ms_2_intro_res_disc.Rmd
+++ b/ms_2_intro_res_disc.Rmd
@@ -130,9 +130,9 @@ p_spp_both_ohi <- round(n_spp_both_ohi/n_spp_ohi * 100, 1)
 
 The global Ocean Health Index (OHI) (Halpern et al. 2012, 2015), a composite index comprising ten sustainable benefits provided by a healthy ocean, uses species spatial distribution data and IUCN Red List conservation status to calculate biodiversity status (scored from zero to 100) for each of the world's 221 exclusive economic zones. To maximize the number of represented species, OHI gleans spatial distributions from Red List-assessed species in both IUCN and AquaMaps datasets (n = `r format(n_spp_ohi, big.mark = ',')`), prioritizing IUCN data for the `r format(n_spp_both_ohi, big.mark = ',')` species included in both sources.  OHI currently uses a probability of occurrence threshold of 40% to determine species presence for AquaMaps data.  
 
-We calculated the OHI species status score under several scenarios to observe the impact of toggling the prioritized data set from IUCN to AquaMaps, and toggling the AquaMaps presence threshold from 40% to 0% (<a href = '#fig3'>Fig. 3</a>).  Reducing the threshold increases the apparent range of a species; the slight decrease in average score for scenario 1 suggests increased spatial representation of threatened species.  The slight increase in mean score for scenario 2 may indicate a small increase in spatial representation of low-risk species, a small decrease in spatial representation of high-risk species, or a combination of both.  The large decrease shown in scenario 3 indicates that a zero threshold greatly increases the spatial representation of high-risk species.
+We calculated the OHI species status score under several scenarios to observe the impact of toggling the prioritized data set from IUCN to AquaMaps, and toggling the AquaMaps presence threshold from 40% to 0% (<a href = '#fig3'>Fig. 3</a>).  Reducing the threshold increases the apparent range of a species, so a decrease in a region’s score under scenario 1 would indicate increased spatial representation of threatened species for that region.  Shifting priority from IUCN to AquaMaps may increase or decrease a species’ apparent range, so a decrease in region score for scenario 2 may indicate a decrease in spatial representation of low-risk species, an increase in spatial representation of high-risk species, or a combination of both. Scenario three combines effects of scenarios 1 and 2.
  
-Given that only `r p_spp_both_ohi`% of species overlap, it is surprising that changing the priority for overlapping species from IUCN maps to AquaMaps would result in such large country-level score shifts as seen in scenarios 2 and 3.  While the mean global score did not vary significantly from scenario to scenario, select countries gained up to 7.5 points while others dropped as many as 5 points.  This result indicates that especially on a national or regional scale, an arbitrary change in how the two datasets are combined can result in a very different assessment of species conservation status.
+Given that only `r p_spp_both_ohi`% of species overlap, it is surprising that changing the priority for overlapping species from IUCN maps to AquaMaps would result in substantial country-level score shifts as seen in scenarios 2 and 3.  While the mean global score did not vary significantly from scenario to scenario, select countries gained up to 7.5 points while others dropped as many as 5 points.  This result indicates that especially on a national or regional scale, an arbitrary change in how the two datasets are combined can result in a very different assessment of species conservation status.
 
 **Case Study: MPA Gap Analysis**
 
