--- a/ms_2_intro_res_disc.Rmd
+++ b/ms_2_intro_res_disc.Rmd
@@ -42,7 +42,7 @@ The IUCN publishes species range maps based on expert input of spatial boundarie
 
 The methodologies behind the creation of these datasets imply differences in prediction of species distribution due to errors of commission (falsely indicating species presence) and omission (falsely indicating species absence).  Geographic range data such as IUCN range maps frequently introduce commission errors, while species distribution models such as AquaMaps will likely introduce fewer commission errors but more omission errors.  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range (Rondinini et al. 2006).  By comparing maps resulting from IUCN and AquaMaps methodolog, we can identify and possibly address mechanistic causes for each type of error.
 
-The two datasets have notably different taxonomic (Fig. 1) and regional (Fig. 2) coverage.  AquaMaps encompasses a broader range of taxa than IUCN, as IUCN spatial data files are only available for select taxonomic groups that have been comprehensively assessed. While species numbers in both datasets peak in tropical latitudes near the equator, species counts for IUCN maps drop quickly beyond 30°N and 30°S, while species counts for AquaMaps remain robust well into temperate latitudes.  The longitude frequency plots show a slight bias in the IUCN dataset away from the Atlantic and eastern Pacific compared to AquaMaps.  To achieve more comprehensive global coverage of species ranges these two datasets can be used together, but the underlying methodological differences complicate such direct comparisons.
+The two datasets have notably different taxonomic (Fig. 1A) and regional (Figs. 1B, 1C) coverage.  AquaMaps encompasses a broader range of taxa than IUCN, as IUCN spatial data files are only available for select taxonomic groups that have been comprehensively assessed. While species numbers in both datasets peak in tropical latitudes near the equator, species counts for IUCN maps drop quickly beyond 30°N and 30°S, while species counts for AquaMaps remain robust well into temperate latitudes.  The longitude frequency plots show a slight bias in the IUCN dataset away from the Atlantic and eastern Pacific compared to AquaMaps.  To achieve more comprehensive global coverage of species ranges these two datasets can be used together, but the underlying methodological differences complicate such direct comparisons.
 
 ``` {r load_spp_list_by_quad, echo = FALSE}
 spp_list_quads <- read.csv('data/spp_list_quads.csv', stringsAsFactors = FALSE)
@@ -77,13 +77,13 @@ med_occ_q123 <- round(median(spp_quads_occ$mean_occ[spp_quads_occ$quad %in% c('q
 
 ```
 
-To explore differences in species distribution and range between the two datasets, we plotted the distribution alignment (how much of the smaller range falls within the larger range, i.e., where on the map) against the area alignment (ratio of smaller range area to larger range area, i.e., how much of the map) for each shared species (Fig. 3A). 
+To explore differences in species distribution and range between the two datasets, we plotted the distribution alignment (how much of the smaller range falls within the larger range, i.e., where on the map) against the area alignment (ratio of smaller range area to larger range area, i.e., how much of the map) for each shared species (Fig. 2A). 
  This analysis revealed a general negative linear pattern, suggesting that increasing similarity in range area correlates with decreasing distribution alignment.
  AquaMaps tends to extrapolate species ranges into suitable areas beyond known occurrences, such that each additional unit of range predicted by AquaMaps will fall in different locations than an additional unit of range predicted using IUCN methodology. For species with dissimilar range areas, predicted distribution for the smaller range can more easily fall within the generous bounds of the larger range. For species with increasingly similar range areas, differences in methodology become more difficult to "hide," and the distribution alignment generally becomes poorer.
 
-The mean distribution alignment for species included in both datasets was `r dist_align_mean`%; the mean area alignment was `r area_align_mean`%. By dividing the map-paired species into quadrants based on these means, we highlight categories of relationships that help further explain this general pattern. For representative maps from each category, please refer to the supplemental materials (Fig. S1).  
+The mean distribution alignment for species included in both datasets was `r dist_align_mean`%; the mean area alignment was `r area_align_mean`%. By dividing the map-paired species into quadrants based on these means, we highlight categories of relationships that help further explain this general pattern. Representative maps from each category are provided in the supplemental materials (Fig. S1).  
 
-The upper right quadrant includes species (n = `r n_q1`) whose described ranges are above average in both spatial distribution and extent. These species tend to be well-studied and include wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig. 3B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because their ranges span nearly the entire map.  We expected to see significant concurrence between maps for IUCN Red List species of concern, assuming that increased attention would lead to improved understanding of species ranges; however, we found no compelling patterns to indicate that this was the case (Fig. S2).
+The upper right quadrant includes species (n = `r n_q1`) whose described ranges are above average in both spatial distribution and extent. These species tend to be well-studied and include wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig. 2B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because their ranges span nearly the entire map.  We expected to see significant concurrence between maps for IUCN Red List species of concern, assuming that increased attention would lead to improved understanding of species ranges; however, we found no compelling patterns to indicate that this was the case (Fig. S2).
 
 The area-mismatched ranges contained in the upper left quadrant (n = `r n_q2`) include many species whose spatial distribution is similar, but where the IUCN range is notably larger, often extending into deeper water.  For example, corals dominate this quadrant (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), and IUCN range maps tend to extend corals into waters beyond their preferred depths, likely introducing errors of commission  (Fig. S3). 
  Ocean depth is explicitly included in AquaMaps models, while depth is frequently overlooked as a factor in IUCN range maps.  Simply clipping IUCN range maps to known depth preferences would resolve many of these mismatches.
@@ -95,7 +95,7 @@ The most vexing cases are in the lower left quadrant (n = `r n_q4`), where neith
 
 # Implications
 
-Method-driven differences in commission and omission errors drive clear and significant differences in species range descriptions between AquaMaps and IUCN datasets.   To examine the implications of these differences, we replicated two recent studies, varying only the prioritization of one data set over the other.
+Method-driven differences in commission and omission errors drive clear and significant differences in species range descriptions between AquaMaps and IUCN datasets.   To examine the implications of these differences, we repeated two recent studies, varying only the prioritization of one data set over the other.
 
 **Case Study: The Ocean Health Index**
 
@@ -136,13 +136,13 @@ Given that only `r p_spp_both_ohi`% of species overlap, it is surprising that ch
 
 **Case Study: MPA Gap Analysis**
 
-Klein et al. (2015) compare the global distribution of species to the global distribution of marine protected areas to assess how well the MPAs protect key species and identify which species fall through gaps in protection.  The study relied on the AquaMaps database, using a probability of occurrence threshold of 50% or greater, to determine species presence, and the World Database of Protected Areas to define zones of marine protection.  They found that the global MPA network leaves 90.5% of marine species with less than 5% of their overall range represented within MPAs, and 1.4% of species have no protection at all ("gap" species).
+Klein et al. (2015) compare the global distribution of species to the global distribution of marine protected areas to assess how well the MPAs protect species and identify which species fall through gaps in protection.  The study relied on the AquaMaps database, using a probability of occurrence threshold of 50% or greater, to determine species presence, and the World Database of Protected Areas to define zones of marine protection.  They found that the global MPA network leaves 90.5% of marine species with less than 5% of their overall range represented within MPAs, and 1.4% of species have no protection at all (i.e., "gap" species).
 
 We recalculated the amount of under-protected and gap species using either IUCN or AquaMaps data (using 2015 AquaMaps data and a 0% threshold to allow the most meaningful comparison to IUCN's "limits of distribution", <a href = '#fig4'>Fig. 4</a>).  We found a five-fold increase in the proportion of gap species (6.4% of species vs. 1.2%) and dramatically larger proportion of species with less than 2% of their range protected (73.2% of species vs. 47.7%).  However, this comparison also indicates a larger proportion of well-protected species with greater than 10% of range protected (2.9% of species vs. 1.5%).  Conclusions drawn from each of these datasets would paint dramatically different pictures of the protection afforded by our current global MPA network. 
 
 # Conclusions
 
-AquaMaps and IUCN range maps show reasonable agreement for many well-studied species, but substantial differences illustrate uncertainty in our understanding of spatial distribution for many others.  Although many other appriaches exist for species distribution modeling, these two are the only ones applied globally to marine species.  Identifying and addressing differences in these datasets will increase their utility for research and conservation actions.  Several likely drivers of commission errors and omission errors between these datasets point to a few important ways to improve range alignment.
+AquaMaps and IUCN range maps show reasonable agreement for many well-studied species, but substantial differences illustrate uncertainty in our understanding of spatial distribution for many others.  Although many other approaches exist for species distribution modeling, these two are the only ones applied globally to marine species.  Identifying and addressing differences in these datasets will increase their utility for research and conservation actions.  Several likely drivers of commission and omission errors between these datasets point to a few important ways to improve range alignment.
 
 For IUCN range data, clipping ranges to known depth limits improves output for many species, most notably corals and reef-associated fishes.  If species' depth limits are not known, simple rules of thumb will likely reduce commission errors without introducing substantial omission errors.  For example, for most corals, researchers could clip range maps to the photosynthetic limit of 200 meters.  For AquaMaps range data, dependent primarily on environmental and physical preferences and conditions, implementing area restrictions based on biogeographical criteria such as Marine Ecoregions of the World (Spalding et al. 2007) would likely decrease commission errors and improve predictive power, especially for data-poor species.
 
